--- a/module1/assignment_regression_classification_1.ipynb
+++ b/module1/assignment_regression_classification_1.ipynb
@@ -41,8 +41,31 @@
         "- [ ] Define a function to make new predictions and explain the model coefficient.\n",
         "- [ ] Organize and comment your code.\n",
         "\n",
-        "> [Do Not Copy-Paste.](https://docs.google.com/document/d/1ubOw9B3Hfip27hF2ZFnW3a3z9xAgrUDRReOEo-FHCVs/edit) You must type each of these exercises in, manually. If you copy and paste, you might as well not even do them. The point of these exercises is to train your hands, your brain, and your mind in how to read, write, and see code. If you copy-paste, you are cheating yourself out of the effectiveness of the lessons.\n",
-        "\n",
+        "> [Do Not Copy-Paste.](https://docs.google.com/document/d/1ubOw9B3Hfip27hF2ZFnW3a3z9xAgrUDRReOEo-FHCVs/edit) You must type each of these exercises in, manually. If you copy and paste, you might as well not even do them. The point of these exercises is to train your hands, your brain, and your mind in how to read, write, and see code. If you copy-paste, you are cheating yourself out of the effectiveness of the lessons."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KQ8ngk-TqyID",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6zsQNJG6qxOk",
+        "colab_type": "text"
+      },
+      "source": [
         "## Stretch Goals\n",
         "- [ ] Do linear regression with two or more features.\n",
         "- [ ] Read [The Discovery of Statistical Regression](https://priceonomics.com/the-discovery-of-statistical-regression/)\n",
