--- a/module2/assignment_regression_classification_2.ipynb
+++ b/module2/assignment_regression_classification_2.ipynb
@@ -6,7 +6,8 @@
       "name": "assignment_regression_classification_2.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jeibloo/DS-Unit-2-Regression-Classification/blob/master/module2/assignment_regression_classification_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -29,7 +40,7 @@
         "\n",
         "You'll continue to **predict how much it costs to rent an apartment in NYC,** using the dataset from renthop.com.\n",
         "\n",
-        "- [ ] Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
+        "- [X] Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
         "- [ ] Engineer at least two new features. (See below for explanation & ideas.)\n",
         "- [ ] Fit a linear regression model with at least two features.\n",
         "- [ ] Get the model's coefficients and intercept.\n",
@@ -137,6 +148,385 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vyJJok9nWz3j",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "### Engineer at least two new features\n",
+        "### Like, total rooms & how many total perks there are I guess\n",
+        "\n",
+        "df['total_rooms'] = df['bathrooms'] + df['bedrooms']\n",
+        "df.head(5)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YL6BsHlmSTeh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "1b1184d4-bc40-47bc-acb0-10bfcca37b91"
+      },
+      "source": [
+        "### Separate into train (April/May 2016) and test (June 2016) data.\n",
+        "### _____________________04 & 05___________________06\n",
+        "# Switch created column to datetime\n",
+        "df['created'] = pd.to_datetime(df['created'],infer_datetime_format=True)\n",
+        "df['created'].describe()"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count                   48817\n",
+              "unique                  48148\n",
+              "top       2016-05-14 01:11:03\n",
+              "freq                        3\n",
+              "first     2016-04-01 22:12:41\n",
+              "last      2016-06-29 21:41:47\n",
+              "Name: created, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "chXtNvvSTU32",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 530
+        },
+        "outputId": "e274b877-2a8e-419c-930e-eeb363e463b0"
+      },
+      "source": [
+        "# Since dates are all within 2016, and start in April and end in June, it makes\n",
+        "# it easier to separate.\n",
+        "\n",
+        "df_test = df[df['created'].dt.month == 6].copy()\n",
+        "train_mask = (\n",
+        "    (df['created'].dt.month == 5) | \n",
+        "    (df['created'].dt.month == 4)\n",
+        ")\n",
+        "df_train = df[train_mask].copy()\n",
+        "df_train.head(5)"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>bathrooms</th>\n",
+              "      <th>bedrooms</th>\n",
+              "      <th>created</th>\n",
+              "      <th>description</th>\n",
+              "      <th>display_address</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>price</th>\n",
+              "      <th>street_address</th>\n",
+              "      <th>interest_level</th>\n",
+              "      <th>elevator</th>\n",
+              "      <th>cats_allowed</th>\n",
+              "      <th>hardwood_floors</th>\n",
+              "      <th>dogs_allowed</th>\n",
+              "      <th>doorman</th>\n",
+              "      <th>dishwasher</th>\n",
+              "      <th>no_fee</th>\n",
+              "      <th>laundry_in_building</th>\n",
+              "      <th>fitness_center</th>\n",
+              "      <th>pre-war</th>\n",
+              "      <th>laundry_in_unit</th>\n",
+              "      <th>roof_deck</th>\n",
+              "      <th>outdoor_space</th>\n",
+              "      <th>dining_room</th>\n",
+              "      <th>high_speed_internet</th>\n",
+              "      <th>balcony</th>\n",
+              "      <th>swimming_pool</th>\n",
+              "      <th>new_construction</th>\n",
+              "      <th>terrace</th>\n",
+              "      <th>exclusive</th>\n",
+              "      <th>loft</th>\n",
+              "      <th>garden_patio</th>\n",
+              "      <th>wheelchair_access</th>\n",
+              "      <th>common_outdoor_space</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2016-04-17 03:26:41</td>\n",
+              "      <td>Top Top West Village location, beautiful Pre-w...</td>\n",
+              "      <td>W 13 Street</td>\n",
+              "      <td>40.7388</td>\n",
+              "      <td>-74.0018</td>\n",
+              "      <td>2850</td>\n",
+              "      <td>241 W 13 Street</td>\n",
+              "      <td>high</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2016-04-18 02:22:02</td>\n",
+              "      <td>Building Amenities - Garage - Garden - fitness...</td>\n",
+              "      <td>East 49th Street</td>\n",
+              "      <td>40.7539</td>\n",
+              "      <td>-73.9677</td>\n",
+              "      <td>3275</td>\n",
+              "      <td>333 East 49th Street</td>\n",
+              "      <td>low</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>2016-04-28 01:32:41</td>\n",
+              "      <td>Beautifully renovated 3 bedroom flex 4 bedroom...</td>\n",
+              "      <td>West 143rd Street</td>\n",
+              "      <td>40.8241</td>\n",
+              "      <td>-73.9493</td>\n",
+              "      <td>3350</td>\n",
+              "      <td>500 West 143rd Street</td>\n",
+              "      <td>low</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>2016-04-19 04:24:47</td>\n",
+              "      <td></td>\n",
+              "      <td>West 18th Street</td>\n",
+              "      <td>40.7429</td>\n",
+              "      <td>-74.0028</td>\n",
+              "      <td>7995</td>\n",
+              "      <td>350 West 18th Street</td>\n",
+              "      <td>medium</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2016-04-27 03:19:56</td>\n",
+              "      <td>Stunning unit with a great location and lots o...</td>\n",
+              "      <td>West 107th Street</td>\n",
+              "      <td>40.8012</td>\n",
+              "      <td>-73.9660</td>\n",
+              "      <td>3600</td>\n",
+              "      <td>210 West 107th Street</td>\n",
+              "      <td>low</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   bathrooms  bedrooms  ... wheelchair_access common_outdoor_space\n",
+              "2        1.0         1  ...                 0                    0\n",
+              "3        1.0         1  ...                 0                    0\n",
+              "4        1.0         4  ...                 0                    0\n",
+              "5        2.0         4  ...                 0                    0\n",
+              "6        1.0         2  ...                 0                    0\n",
+              "\n",
+              "[5 rows x 34 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eVu-3gA2WXqn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c659b4de-01a1-478f-e09f-a333df726ae5"
+      },
+      "source": [
+        "### Ok awesome I think it worked.\n",
+        "df_train.created.dt.month.unique()"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4, 5])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 49
+        }
+      ]
     }
   ]
 }
