Colab keeps crashing

--- a/module2/assignment_regression_classification_2.ipynb
+++ b/module2/assignment_regression_classification_2.ipynb
@@ -41,7 +41,7 @@
         "You'll continue to **predict how much it costs to rent an apartment in NYC,** using the dataset from renthop.com.\n",
         "\n",
         "- [X] Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
-        "- [ ] Engineer at least two new features. (See below for explanation & ideas.)\n",
+        "- [X] Engineer at least two new features. (See below for explanation & ideas.)\n",
         "- [ ] Fit a linear regression model with at least two features.\n",
         "- [ ] Get the model's coefficients and intercept.\n",
         "- [ ] Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data.\n",
@@ -161,7 +161,30 @@
         "### Like, total rooms & how many total perks there are I guess\n",
         "\n",
         "df['total_rooms'] = df['bathrooms'] + df['bedrooms']\n",
-        "df.head(5)"
+        "df['total_perks'] = (\n",
+        "    df['elevator'] +\n",
+        "    df['cats_allowed'] +\n",
+        "    df['dogs_allowed'] +\n",
+        "    df['hardwood_floors'] +\n",
+        "    df['doorman'] + \n",
+        "    df['dishwasher'] +\n",
+        "    df['no_fee'] +\n",
+        "    df['laundry_in_building'] +\n",
+        "    df['fitness_center'] +\n",
+        "    df['laundry_in_unit'] +\n",
+        "    df['roof_deck'] +\n",
+        "    df['outdoor_space'] +\n",
+        "    df['dining_room'] +\n",
+        "    df['high_speed_internet'] +\n",
+        "    df['balcony'] +\n",
+        "    df['swimming_pool'] +\n",
+        "    df['new_construction'] +\n",
+        "    df['terrace'] +\n",
+        "    df['exclusive'] +\n",
+        "    df['loft'] +\n",
+        "    df['garden_patio'] +\n",
+        "    df['common_outdoor_space']\n",
+        ")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -175,7 +198,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
-        "outputId": "1b1184d4-bc40-47bc-acb0-10bfcca37b91"
+        "outputId": "08598671-7ca6-4c38-a69a-8f022f0fa710"
       },
       "source": [
         "### Separate into train (April/May 2016) and test (June 2016) data.\n",
@@ -184,7 +207,7 @@
         "df['created'] = pd.to_datetime(df['created'],infer_datetime_format=True)\n",
         "df['created'].describe()"
       ],
-      "execution_count": 43,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +225,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 55
         }
       ]
     },
@@ -211,11 +234,7 @@
       "metadata": {
         "id": "chXtNvvSTU32",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 530
-        },
-        "outputId": "e274b877-2a8e-419c-930e-eeb363e463b0"
+        "colab": {}
       },
       "source": [
         "# Since dates are all within 2016, and start in April and end in June, it makes\n",
@@ -226,10 +245,26 @@
         "    (df['created'].dt.month == 5) | \n",
         "    (df['created'].dt.month == 4)\n",
         ")\n",
-        "df_train = df[train_mask].copy()\n",
+        "df_train = df[train_mask].copy()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eVu-3gA2WXqn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 530
+        },
+        "outputId": "5d6e154f-5ac2-4142-aa0a-65ea6b3bdfc7"
+      },
+      "source": [
         "df_train.head(5)"
       ],
-      "execution_count": 44,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,6 +322,8 @@
               "      <th>garden_patio</th>\n",
               "      <th>wheelchair_access</th>\n",
               "      <th>common_outdoor_space</th>\n",
+              "      <th>total_rooms</th>\n",
+              "      <th>total_perks</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -326,6 +363,8 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -363,6 +402,8 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -399,6 +440,8 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5.0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -437,6 +480,8 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
@@ -474,57 +519,75 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   bathrooms  bedrooms  ... wheelchair_access common_outdoor_space\n",
-              "2        1.0         1  ...                 0                    0\n",
-              "3        1.0         1  ...                 0                    0\n",
-              "4        1.0         4  ...                 0                    0\n",
-              "5        2.0         4  ...                 0                    0\n",
-              "6        1.0         2  ...                 0                    0\n",
+              "   bathrooms  bedrooms  ... total_rooms total_perks\n",
+              "2        1.0         1  ...         2.0           3\n",
+              "3        1.0         1  ...         2.0           2\n",
+              "4        1.0         4  ...         5.0           0\n",
+              "5        2.0         4  ...         6.0           0\n",
+              "6        1.0         2  ...         3.0           3\n",
               "\n",
-              "[5 rows x 34 columns]"
+              "[5 rows x 36 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 57
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eVu-3gA2WXqn",
+        "id": "XrYN48ssa4FC",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c659b4de-01a1-478f-e09f-a333df726ae5"
+        "outputId": "25ced11c-e889-4c74-cca3-edcc1ea2c787"
       },
       "source": [
-        "### Ok awesome I think it worked.\n",
-        "df_train.created.dt.month.unique()"
+        "### Fit Linear Regression with two features baby\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.preprocessing import PolynomialFeatures\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "\n",
+        "model = LinearRegression()\n",
+        "\n",
+        "# assign X matrix and y vekkie\n",
+        "features = ['total_rooms','total_perks']\n",
+        "target = 'price'\n",
+        "\n",
+        "X = df[features]\n",
+        "y = df[target]\n",
+        "\n",
+        "model.fit(X,y)\n",
+        "model.intercept_,model.coef_"
       ],
-      "execution_count": 49,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([4, 5])"
+              "(1000.9407662979152, array([766.6592496 , 107.36291087]))"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 58
         }
       ]
     }
