212 assignment minor tweaks

--- a/module2/212_assignment_regression_classification_2.ipynb
+++ b/module2/212_assignment_regression_classification_2.ipynb
@@ -664,6 +664,26 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8-x1529wwIkT",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Assignment\n",
+        "\n",
+        "You'll continue to **predict how much it costs to rent an apartment in NYC,** using the dataset from renthop.com.\n",
+        "\n",
+        "- [ ] Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
+        "- [ ] Engineer at least two new features. (See below for explanation & ideas.)\n",
+        "- [ ] Fit a linear regression model with at least two features.\n",
+        "- [ ] Get the model's coefficients and intercept.\n",
+        "- [ ] Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data.\n",
+        "- [ ] What's the best test MAE you can get? Share your score and features used with your cohort on Slack!\n",
+        "- [ ] As always, commit your notebook to your fork of the GitHub repo.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "54LuJjmlqYpt",
@@ -724,26 +744,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8-x1529wwIkT",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Assignment\n",
-        "\n",
-        "You'll continue to **predict how much it costs to rent an apartment in NYC,** using the dataset from renthop.com.\n",
-        "\n",
-        "- [ ] Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
-        "- [ ] Engineer at least two new features. (See below for explanation & ideas.)\n",
-        "- [ ] Fit a linear regression model with at least two features.\n",
-        "- [ ] Get the model's coefficients and intercept.\n",
-        "- [ ] Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data.\n",
-        "- [ ] What's the best test MAE you can get? Share your score and features used with your cohort on Slack!\n",
-        "- [ ] As always, commit your notebook to your fork of the GitHub repo.\n"
-      ]
     },
     {
       "cell_type": "code",
@@ -1086,7 +1086,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Adding interest level significantly improved R^2. In both of my attempts (with and without 'interest level') the test data better fit the model than the train data."
+        "Adding interest level and not using a customer feature combining bedrooms and bathrooms significantly improved R^2. In both of my attempts (with and without 'interest level') the test data better fit the model than the train data."
       ]
     },
     {
