--- a/module2/assignment_regression_classification_2.ipynb
+++ b/module2/assignment_regression_classification_2.ipynb
@@ -1,1 +1,293 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"assignment_regression_classification_2.ipynb","version":"0.3.2","provenance":[{"file_id":"https://github.com/Jordan-Ireland/DS-Unit-2-Regression-Classification/blob/master/module2/assignment_regression_classification_2.ipynb","timestamp":1565121936366}],"collapsed_sections":[]},"kernelspec":{"name":"python3","display_name":"Python 3"}},"cells":[{"cell_type":"markdown","metadata":{"id":"7IXUfiQ2UKj6","colab_type":"text"},"source":["Lambda School Data Science, Unit 2: Predictive Modeling\n","\n","# Regression & Classification, Module 2\n","\n","\n","#### [Feature Engineering](https://en.wikipedia.org/wiki/Feature_engineering)\n","\n","> \"Some machine learning projects succeed and some fail. What makes the difference? Easily the most important factor is the features used.\" — Pedro Domingos, [\"A Few Useful Things to Know about Machine Learning\"](https://homes.cs.washington.edu/~pedrod/papers/cacm12.pdf)\n","\n","> \"Coming up with features is difficult, time-consuming, requires expert knowledge. 'Applied machine learning' is basically feature engineering.\" — Andrew Ng, [Machine Learning and AI via Brain simulations](https://forum.stanford.edu/events/2011/2011slides/plenary/2011plenaryNg.pdf) \n","\n","> Feature engineering is the process of using domain knowledge of the data to create features that make machine learning algorithms work. \n","\n","#### Feature Ideas\n","- Does the apartment have a description?\n","- How long is the description?\n","- How many total perks does each apartment have?\n","- Are cats _or_ dogs allowed?\n","- Are cats _and_ dogs allowed?\n","- Total number of rooms (beds + baths)\n","- Ratio of beds to baths\n","- What's the neighborhood, based on address or latitude & longitude?\n","\n","## Stretch Goals\n","- [ ] If you want more math, skim [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf),  Chapter 3.1, Simple Linear Regression, & Chapter 3.2, Multiple Linear Regression\n","- [ ] If you want more introduction, watch [Brandon Foltz, Statistics 101: Simple Linear Regression](https://www.youtube.com/watch?v=ZkjP5RJLQF4)\n","(20 minutes, over 1 million views)\n","- [ ] Do the [Plotly Dash](https://dash.plot.ly/) Tutorial, Parts 1 & 2.\n","- [ ] Add your own stretch goal(s) !"]},{"cell_type":"code","metadata":{"id":"o9eSnDYhUGD7","colab_type":"code","colab":{}},"source":["# If you're in Colab...\n","import os, sys\n","in_colab = 'google.colab' in sys.modules\n","\n","if in_colab:\n","    # Install required python packages:\n","    # pandas-profiling, version >= 2.0\n","    # plotly, version >= 4.0\n","    !pip install --upgrade pandas-profiling plotly\n","    \n","    # Pull files from Github repo\n","    os.chdir('/content')\n","    !git init .\n","    !git remote add origin https://github.com/LambdaSchool/DS-Unit-2-Regression-Classification.git\n","    !git pull origin master\n","    \n","    # Change into directory for module\n","    os.chdir('module1')"],"execution_count":0,"outputs":[]},{"cell_type":"code","metadata":{"id":"ipBYS77PUwNR","colab_type":"code","colab":{}},"source":["# Ignore this Numpy warning when using Plotly Express:\n","# FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n","import warnings\n","warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"],"execution_count":0,"outputs":[]},{"cell_type":"code","metadata":{"id":"cvrw-T3bZOuW","colab_type":"code","colab":{}},"source":["import numpy as np\n","import pandas as pd\n","\n","# Read New York City apartment rental listing data\n","df = pd.read_csv('../data/renthop-nyc.csv')\n","assert df.shape == (49352, 34)\n","\n","# Remove the most extreme 1% prices,\n","# the most extreme .1% latitudes, &\n","# the most extreme .1% longitudes\n","df = df[(df['price'] >= np.percentile(df['price'], 0.5)) & \n","        (df['price'] <= np.percentile(df['price'], 99.5)) & \n","        (df['latitude'] >= np.percentile(df['latitude'], 0.05)) & \n","        (df['latitude'] < np.percentile(df['latitude'], 99.95)) &\n","        (df['longitude'] >= np.percentile(df['longitude'], 0.05)) & \n","        (df['longitude'] <= np.percentile(df['longitude'], 99.95))]"],"execution_count":0,"outputs":[]},{"cell_type":"markdown","metadata":{"id":"CDoaIoz4kibX","colab_type":"text"},"source":["##Assignment\n","\n","You'll continue to **predict how much it costs to rent an apartment in NYC,** using the dataset from renthop.com.\n","\n","- [ ] Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n","- [ ] Engineer at least two new features. (See below for explanation & ideas.)\n","- [ ] Fit a linear regression model with at least two features.\n","- [ ] Get the model's coefficients and intercept.\n","- [ ] Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data.\n","- [ ] What's the best test MAE you can get? Share your score and features used with your cohort on Slack!\n","- [ ] As always, commit your notebook to your fork of the GitHub repo."]},{"cell_type":"code","metadata":{"id":"EHPX1NpYl2JT","colab_type":"code","colab":{}},"source":["from sklearn.linear_model import LinearRegression\n","from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n","\n","model = LinearRegression()\n","\n","##split data\n","mask = ((df['created'].str.contains('2016-04')) | (df['created'].str.contains('2016-05')))\n","training_df = df[mask]\n","testing_df = df[df['created'].str.contains('2016-06')]\n","\n","##choose Features\n","features = ['bathrooms','bedrooms','latitude','longitude']\n","target = 'price'\n","\n","\n","##set X and y\n","X_train = training_df[features]\n","y_train = training_df[target]\n","\n","X_test = testing_df[features]\n","y_test = testing_df[target]\n","\n","#fit model\n","model.fit(X_train,y_train)\n","\n","y_pred = model.predict(X_test)\n","\n","# model.intercept_, model.coef_\n","\n","# model.score(X_train,y_train)"],"execution_count":0,"outputs":[]},{"cell_type":"code","metadata":{"id":"cKMNKEVKo-Xr","colab_type":"code","colab":{"base_uri":"https://localhost:8080/","height":34},"outputId":"812367be-90f1-44cb-de52-424295d5b0b9","executionInfo":{"status":"ok","timestamp":1565125786311,"user_tz":420,"elapsed":351,"user":{"displayName":"Jordan","photoUrl":"","userId":"11145453913332585778"}}},"source":["rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n","print(rmse)"],"execution_count":48,"outputs":[{"output_type":"stream","text":["1131.1950868928673\n"],"name":"stdout"}]},{"cell_type":"code","metadata":{"id":"dwDTOg1rxDj2","colab_type":"code","colab":{}},"source":[""],"execution_count":0,"outputs":[]}]}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "7IXUfiQ2UKj6"
+   },
+   "source": [
+    "Lambda School Data Science, Unit 2: Predictive Modeling\n",
+    "\n",
+    "# Regression & Classification, Module 2\n",
+    "\n",
+    "\n",
+    "#### [Feature Engineering](https://en.wikipedia.org/wiki/Feature_engineering)\n",
+    "\n",
+    "> \"Some machine learning projects succeed and some fail. What makes the difference? Easily the most important factor is the features used.\" — Pedro Domingos, [\"A Few Useful Things to Know about Machine Learning\"](https://homes.cs.washington.edu/~pedrod/papers/cacm12.pdf)\n",
+    "\n",
+    "> \"Coming up with features is difficult, time-consuming, requires expert knowledge. 'Applied machine learning' is basically feature engineering.\" — Andrew Ng, [Machine Learning and AI via Brain simulations](https://forum.stanford.edu/events/2011/2011slides/plenary/2011plenaryNg.pdf) \n",
+    "\n",
+    "> Feature engineering is the process of using domain knowledge of the data to create features that make machine learning algorithms work. \n",
+    "\n",
+    "#### Feature Ideas\n",
+    "- Does the apartment have a description?\n",
+    "- How long is the description?\n",
+    "- How many total perks does each apartment have?\n",
+    "- Are cats _or_ dogs allowed?\n",
+    "- Are cats _and_ dogs allowed?\n",
+    "- Total number of rooms (beds + baths)\n",
+    "- Ratio of beds to baths\n",
+    "- What's the neighborhood, based on address or latitude & longitude?\n",
+    "\n",
+    "## Stretch Goals\n",
+    "- [ ] If you want more math, skim [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf),  Chapter 3.1, Simple Linear Regression, & Chapter 3.2, Multiple Linear Regression\n",
+    "- [ ] If you want more introduction, watch [Brandon Foltz, Statistics 101: Simple Linear Regression](https://www.youtube.com/watch?v=ZkjP5RJLQF4)\n",
+    "(20 minutes, over 1 million views)\n",
+    "- [ ] Do the [Plotly Dash](https://dash.plot.ly/) Tutorial, Parts 1 & 2.\n",
+    "- [ ] Add your own stretch goal(s) !"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "o9eSnDYhUGD7"
+   },
+   "outputs": [],
+   "source": [
+    "# If you're in Colab...\n",
+    "import os, sys\n",
+    "in_colab = 'google.colab' in sys.modules\n",
+    "\n",
+    "if in_colab:\n",
+    "    # Install required python packages:\n",
+    "    # pandas-profiling, version >= 2.0\n",
+    "    # plotly, version >= 4.0\n",
+    "    !pip install --upgrade pandas-profiling plotly\n",
+    "    \n",
+    "    # Pull files from Github repo\n",
+    "    os.chdir('/content')\n",
+    "    !git init .\n",
+    "    !git remote add origin https://github.com/LambdaSchool/DS-Unit-2-Regression-Classification.git\n",
+    "    !git pull origin master\n",
+    "    \n",
+    "    # Change into directory for module\n",
+    "    os.chdir('module1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "ipBYS77PUwNR"
+   },
+   "outputs": [],
+   "source": [
+    "# Ignore this Numpy warning when using Plotly Express:\n",
+    "# FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
+    "import warnings\n",
+    "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "cvrw-T3bZOuW"
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Read New York City apartment rental listing data\n",
+    "df = pd.read_csv('../data/renthop-nyc.csv')\n",
+    "assert df.shape == (49352, 34)\n",
+    "\n",
+    "# Remove the most extreme 1% prices,\n",
+    "# the most extreme .1% latitudes, &\n",
+    "# the most extreme .1% longitudes\n",
+    "df = df[(df['price'] >= np.percentile(df['price'], 0.5)) & \n",
+    "        (df['price'] <= np.percentile(df['price'], 99.5)) & \n",
+    "        (df['latitude'] >= np.percentile(df['latitude'], 0.05)) & \n",
+    "        (df['latitude'] < np.percentile(df['latitude'], 99.95)) &\n",
+    "        (df['longitude'] >= np.percentile(df['longitude'], 0.05)) & \n",
+    "        (df['longitude'] <= np.percentile(df['longitude'], 99.95))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "CDoaIoz4kibX"
+   },
+   "source": [
+    "##Assignment\n",
+    "\n",
+    "You'll continue to **predict how much it costs to rent an apartment in NYC,** using the dataset from renthop.com.\n",
+    "\n",
+    "- [ ] Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
+    "- [ ] Engineer at least two new features. (See below for explanation & ideas.)\n",
+    "- [ ] Fit a linear regression model with at least two features.\n",
+    "- [ ] Get the model's coefficients and intercept.\n",
+    "- [ ] Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data.\n",
+    "- [ ] What's the best test MAE you can get? Share your score and features used with your cohort on Slack!\n",
+    "- [ ] As always, commit your notebook to your fork of the GitHub repo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "EHPX1NpYl2JT"
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "##split data\n",
+    "mask = ((df['created'].str.contains('2016-04')) | (df['created'].str.contains('2016-05')))\n",
+    "training_df = df[mask]\n",
+    "testing_df = df[df['created'].str.contains('2016-06')]\n",
+    "\n",
+    "##choose Features\n",
+    "features = ['bathrooms','bedrooms','latitude','longitude']\n",
+    "target = 'price'\n",
+    "\n",
+    "\n",
+    "##set X and y\n",
+    "X_train = training_df[features]\n",
+    "y_train = training_df[target]\n",
+    "\n",
+    "X_test = testing_df[features]\n",
+    "y_test = testing_df[target]\n",
+    "\n",
+    "#fit model\n",
+    "model.fit(X_train,y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# model.intercept_, model.coef_\n",
+    "\n",
+    "# model.score(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 34
+    },
+    "colab_type": "code",
+    "executionInfo": {
+     "elapsed": 351,
+     "status": "ok",
+     "timestamp": 1565125786311,
+     "user": {
+      "displayName": "Jordan",
+      "photoUrl": "",
+      "userId": "11145453913332585778"
+     },
+     "user_tz": 420
+    },
+    "id": "cKMNKEVKo-Xr",
+    "outputId": "812367be-90f1-44cb-de52-424295d5b0b9"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1131.1950868928666\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "print(rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "dwDTOg1rxDj2"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "744.9752658120665"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5882903576478158"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2 = model.score(X_test, y_test)\n",
+    "r2"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "assignment_regression_classification_2.ipynb",
+   "provenance": [
+    {
+     "file_id": "https://github.com/Jordan-Ireland/DS-Unit-2-Regression-Classification/blob/master/module2/assignment_regression_classification_2.ipynb",
+     "timestamp": 1565121936366
+    }
+   ],
+   "version": "0.3.2"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
+}
