--- a/assignment_regression_classification_3.ipynb
+++ b/assignment_regression_classification_3.ipynb
@@ -2357,13 +2357,78 @@
       "metadata": {
         "id": "z2kYSd8WcHKc",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 754
+        },
+        "outputId": "4916c00e-c652-4270-cb57-b95360233dbc"
       },
       "source": [
-        ""
+        "all_names = X_train.columns\n",
+        "selected_mask = selector.get_support()\n",
+        "selected_names = all_names[selected_mask]\n",
+        "unselected_names = all_names[~selected_mask]\n",
+        "\n",
+        "print('Features selected:')\n",
+        "for name in selected_names:\n",
+        "    print(name)\n",
+        "\n",
+        "print('\\nFeatures not selected:')\n",
+        "for name in unselected_names:\n",
+        "    print(name)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Features selected:\n",
+            "BOROUGH\n",
+            "BLOCK\n",
+            "LOT\n",
+            "ZIP_CODE\n",
+            "COMMERCIAL_UNITS\n",
+            "TOTAL_UNITS\n",
+            "LAND_SQUARE_FEET\n",
+            "GROSS_SQUARE_FEET\n",
+            "YEAR_BUILT\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A5\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A1\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A4\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A2\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A3\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_S1\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A6\n",
+            "ROUNDED_ZIP_1046.0\n",
+            "ROUNDED_ZIP_1047.0\n",
+            "ROUNDED_ZIP_1123.0\n",
+            "ROUNDED_ZIP_1122.0\n",
+            "ROUNDED_ZIP_1169.0\n",
+            "ROUNDED_ZIP_1141.0\n",
+            "ROUNDED_ZIP_1136.0\n",
+            "ROUNDED_ZIP_1135.0\n",
+            "ROUNDED_ZIP_1137.0\n",
+            "ROUNDED_ZIP_1142.0\n",
+            "ROUNDED_ZIP_1143.0\n",
+            "ROUNDED_ZIP_1031.0\n",
+            "ROUNDED_ZIP_1030.0\n",
+            "ROUNDED_ZIP_1121.0\n",
+            "ROUNDED_ZIP_1100.0\n",
+            "ROUNDED_ZIP_1110.0\n",
+            "ROUNDED_ZIP_1045.0\n",
+            "ROUNDED_ZIP_1104.0\n",
+            "\n",
+            "Features not selected:\n",
+            "RESIDENTIAL_UNITS\n",
+            "TAX_CLASS_AT_TIME_OF_SALE\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A9\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A0\n",
+            "ROUNDED_ZIP_1120.0\n",
+            "ROUNDED_ZIP_1138.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
