--- a/module3/assignment_regression_classification_3.ipynb
+++ b/module3/assignment_regression_classification_3.ipynb
@@ -3764,6 +3764,67 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lR4l-zc82znK",
+        "colab_type": "text"
+      },
+      "source": [
+        "### @@@ Mean @@@"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AtemzmDV23eb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 109
+        },
+        "outputId": "33f301fc-584c-4af6-a66a-121450443c69"
+      },
+      "source": [
+        "def baseline_results(y_train, y_test):\n",
+        "    pred = np.mean(y_train)\n",
+        "    diffs = y_test - pred\n",
+        "    sqrd_diffs = diffs ** 2\n",
+        "    mae = sum(abs(diffs))\n",
+        "    mse = sum(sqrd_diffs)\n",
+        "    rmse = mse ** 0.5\n",
+        "    print('''\n",
+        "    MAE:  ${:.2f}\n",
+        "    MSE:  {:.2f}\n",
+        "    RMSE: {:.2f}\n",
+        "    '''.format(mae, mse, rmse))\n",
+        "baseline_results(y_train, y_test)"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    MAE:  $135038440.03\n",
+            "    MSE:  58303496943732.57\n",
+            "    RMSE: 7635672.66\n",
+            "    \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8knzMWfX233x",
+        "colab_type": "text"
+      },
+      "source": [
+        "### IMP. NUMERICAL FEATURES ###"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "qqkUYnktAajl",
@@ -4434,18 +4495,61 @@
       "metadata": {
         "id": "lh570WIy11cq",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 127
+        },
+        "outputId": "ce480e14-e6df-4b00-8a9c-6ed63c60466f"
       },
       "source": [
-        "# KBest was k=7\n",
-        "from sklearn.pipeline import make_pipeline\n",
-        "from sklearn.model_selection import cross_validate\n",
+        "# KBest was k=7, so I will pick 7\n",
         "\n",
-        "kbest_lr = make_pipeline(SelectKBest(score_func=f_regression, k=10),\n",
-        "                        LinearRegression())"
+        "############# Import Scikit-learn pipeline #############\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "############# Import regression models #############\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "############# Import pre-processing classes #############\n",
+        "from sklearn.feature_selection import f_regression, SelectKBest\n",
+        "from sklearn.model_selection import cross_validate\n",
+        "from category_encoders import OneHotEncoder\n",
+        "############# Import metrics #############\n",
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+        "\n",
+        "pipln = make_pipeline(OneHotEncoder(use_cat_names=True), SelectKBest(score_func=f_regression, k=7),\n",
+        "                        LinearRegression())\n",
+        "\n",
+        "# Fit model\n",
+        "pipln.fit(X_train, y_train)\n",
+        "# Get score\n",
+        "r_square = pipln.score(X_test, y_test)\n",
+        "# Get predictions\n",
+        "y_pred = pipln.predict(X_test)\n",
+        "# Compute metrics\n",
+        "mae = mean_absolute_error(y_test, y_pred)\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "rmse = np.sqrt(mse)\n",
+        "print('''\n",
+        "R^2: {:.2f}\n",
+        "MSE: {:.2f}\n",
+        "RMSE: {:.2f}\n",
+        "MAE: ${:.2f}\n",
+        "'''.format(r_square, mse, rmse, mae))\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "R^2: 0.39\n",
+            "MSE: 55295906629.03\n",
+            "RMSE: 235150.82\n",
+            "MAE: $159893.02\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
