213 minor formatting tweak

--- a/module3/213_assignment_regression_classification_3.ipynb
+++ b/module3/213_assignment_regression_classification_3.ipynb
@@ -2386,9 +2386,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 204
         },
-        "outputId": "86e11cc5-1af6-4f66-fd1d-28308e8519fb"
+        "outputId": "d43bc1a7-bcc3-4bb3-ab3f-3c66f15606f5"
       },
       "source": [
         "#performance of selected features\n",
@@ -2405,16 +2405,29 @@
         "r2 = r2_score(y_test, y_pred)\n",
         "\n",
         "mse, rmse, mae, r2\n",
-        "print(\"RMSE: \", rmse, \"\\nMAE: \", mae, \"\\nR^2: \", r2)"
+        "# print(\"RMSE: \", rmse, \"MAE: \", mae, \"R^2: \", r2, sep='\\n')\n",
+        "print(f\"\"\"\n",
+        "RMSE: {rmse}\n",
+        "MAE: {mae}\n",
+        "R^2: {r2}\n",
+        "\"\"\")"
       ],
-      "execution_count": 15,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "RMSE:  940740.4865136922 \n",
-            "MAE:  416772.2668066063 \n",
-            "R^2:  0.2428781483377066\n"
+            "RMSE: \n",
+            "940740.4865136922\n",
+            "MAE: \n",
+            "416772.2668066063\n",
+            "R^2: \n",
+            "0.2428781483377066\n",
+            "\n",
+            "RMSE: 940740.4865136922\n",
+            "MAE: 416772.2668066063\n",
+            "R^2: 0.2428781483377066\n",
+            "\n"
           ],
           "name": "stdout"
         }
